# kvick

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
data/: kvick_data.json
src/: CMakeLists.txt  JSONSerializer.hpp  KVick.cpp  KVick.hpp  KVickServer.cpp  KVickServer.hpp  main.cpp  test-client.py  test-clients.py
src/test/: test-client.py  test-parellel-req.py
